--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>Table of Contents - ruby-nuggets Application documentation (v0.8.7)</title>
+<title>Table of Contents - ruby-nuggets Application documentation (v0.8.8)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
 
 <body class="indexpage">
-<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.7)</h1>
+<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.8)</h1>
 
 <h2>Pages</h2>
 <ul>
@@ -223,6 +223,42 @@
     <a href="Nuggets/Version.html">Nuggets::Version</a>
   </li>
     <li class="module">
+    <a href="Util.html">Util</a>
+  </li>
+    <li class="module">
+    <a href="Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
+  </li>
+    <li class="class">
+    <a href="Util/CLI.html">Util::CLI</a>
+  </li>
+    <li class="module">
+    <a href="Util/CLI/OptionParserExtension.html">Util::CLI::OptionParserExtension</a>
+  </li>
+    <li class="module">
+    <a href="Util/ContentType.html">Util::ContentType</a>
+  </li>
+    <li class="module">
+    <a href="Util/ContentType.html">Util::ContentType</a>
+  </li>
+    <li class="module">
+    <a href="Util/I18n.html">Util::I18n</a>
+  </li>
+    <li class="module">
+    <a href="Util/LogParser.html">Util::LogParser</a>
+  </li>
+    <li class="module">
+    <a href="Util/LogParser/Apache.html">Util::LogParser::Apache</a>
+  </li>
+    <li class="module">
+    <a href="Util/LogParser/Rails.html">Util::LogParser::Rails</a>
+  </li>
+    <li class="module">
+    <a href="Util/Pluggable.html">Util::Pluggable</a>
+  </li>
+    <li class="module">
+    <a href="Util/Ruby.html">Util::Ruby</a>
+  </li>
+    <li class="module">
     <a href="Net.html">Net</a>
   </li>
     <li class="class">
@@ -245,30 +281,6 @@
   </li>
     <li class="class">
     <a href="Net/HTTPSuccess.html">Net::HTTPSuccess</a>
-  </li>
-    <li class="module">
-    <a href="Util.html">Util</a>
-  </li>
-    <li class="module">
-    <a href="Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
-  </li>
-    <li class="class">
-    <a href="Util/CLI.html">Util::CLI</a>
-  </li>
-    <li class="module">
-    <a href="Util/ContentType.html">Util::ContentType</a>
-  </li>
-    <li class="module">
-    <a href="Util/ContentType.html">Util::ContentType</a>
-  </li>
-    <li class="module">
-    <a href="Util/I18n.html">Util::I18n</a>
-  </li>
-    <li class="module">
-    <a href="Util/Pluggable.html">Util::Pluggable</a>
-  </li>
-    <li class="module">
-    <a href="Util/Ruby.html">Util::Ruby</a>
   </li>
     <li class="class">
     <a href="Object.html">Object</a>
@@ -338,23 +350,25 @@
   
     <li class="method"><a href="Util/CLI.html#method-c-defaults">::defaults &mdash; Util::CLI</a>
   
-    <li class="method"><a href="Util/CLI.html#method-c-execute">::execute &mdash; Util::CLI</a>
+    <li class="method"><a href="Util/LogParser/Apache.html#method-c-detect_type">::detect_type &mdash; Util::LogParser::Apache</a>
   
-    <li class="method"><a href="Nuggets/File/SubMixin.html#method-c-extended">::extended &mdash; Nuggets::File::SubMixin</a>
+    <li class="method"><a href="Util/CLI.html#method-c-execute">::execute &mdash; Util::CLI</a>
   
     <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ContentTypeMixin</a>
   
     <li class="method"><a href="Nuggets/URI/ExistMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ExistMixin</a>
   
+    <li class="method"><a href="Nuggets/File/SubMixin.html#method-c-extended">::extended &mdash; Nuggets::File::SubMixin</a>
+  
     <li class="method"><a href="String.html#method-c-gimme_match_data-21">::gimme_match_data! &mdash; String</a>
-  
-    <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
-  
-    <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
   
     <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
   
+    <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
+  
     <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
+  
+    <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
   
     <li class="method"><a href="Process.html#method-c-interact_ruby">::interact_ruby &mdash; Process</a>
   
@@ -368,9 +382,15 @@
   
     <li class="method"><a href="Util/CLI.html#method-c-parent_const_get">::parent_const_get &mdash; Util::CLI</a>
   
+    <li class="method"><a href="Util/LogParser/Apache.html#method-c-parse_format">::parse_format &mdash; Util::LogParser::Apache</a>
+  
     <li class="method"><a href="IO.html#method-c-read">::read &mdash; IO</a>
   
     <li class="method"><a href="IO.html#method-c-read_write">::read_write &mdash; IO</a>
+  
+    <li class="method"><a href="Util/LogParser/Apache.html#method-c-register">::register &mdash; Util::LogParser::Apache</a>
+  
+    <li class="method"><a href="Util/LogParser.html#method-c-register">::register &mdash; Util::LogParser</a>
   
     <li class="method"><a href="Process.html#method-c-ruby">::ruby &mdash; Process</a>
   
@@ -610,6 +630,8 @@
   
     <li class="method"><a href="Nuggets/IO/InteractMixin.html#method-i-interact">#interact &mdash; Nuggets::IO::InteractMixin</a>
   
+    <li class="method"><a href="Util/CLI/OptionParserExtension.html#method-i-keys">#keys &mdash; Util::CLI::OptionParserExtension</a>
+  
     <li class="method"><a href="Hash.html#method-i-last">#last &mdash; Hash</a>
   
     <li class="method"><a href="Nuggets/Integer/LengthMixin.html#method-i-length">#length &mdash; Nuggets::Integer::LengthMixin</a>
@@ -727,6 +749,16 @@
     <li class="method"><a href="Util/CLI.html#method-i-option_parser">#option_parser &mdash; Util::CLI</a>
   
     <li class="method"><a href="Util/CLI.html#method-i-opts">#opts &mdash; Util::CLI</a>
+  
+    <li class="method"><a href="Util/LogParser.html#method-i-parse">#parse &mdash; Util::LogParser</a>
+  
+    <li class="method"><a href="Util/LogParser.html#method-i-parse_file">#parse_file &mdash; Util::LogParser</a>
+  
+    <li class="method"><a href="Util/LogParser/Apache.html#method-i-parse_line">#parse_line &mdash; Util::LogParser::Apache</a>
+  
+    <li class="method"><a href="Util/LogParser/Rails.html#method-i-parse_line">#parse_line &mdash; Util::LogParser::Rails</a>
+  
+    <li class="method"><a href="Util/LogParser.html#method-i-parse_line">#parse_line &mdash; Util::LogParser</a>
   
     <li class="method"><a href="Util/CLI.html#method-i-parse_options">#parse_options &mdash; Util::CLI</a>
   
@@ -864,17 +896,17 @@
   
     <li class="method"><a href="String.html#method-i-sub_with_md-21">#sub_with_md! &mdash; String</a>
   
-    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
-  
-    <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
-  
     <li class="method"><a href="Net/HTTPSuccess.html#method-i-success-3F">#success? &mdash; Net::HTTPSuccess</a>
   
-    <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
+    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
   
     <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
   
+    <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
+  
     <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
+  
+    <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
   
     <li class="method"><a href="Integer.html#method-i-to_binary_s">#to_binary_s &mdash; Integer</a>
   
