--- a/Array.html
+++ b/Array.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Array - ruby-nuggets Application documentation (v0.8.7)</title>
+<title>class Array - ruby-nuggets Application documentation (v0.8.8)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -329,6 +329,30 @@
   
     <li><a href="./Nuggets/Version.html">Nuggets::Version</a>
   
+    <li><a href="./Util.html">Util</a>
+  
+    <li><a href="./Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
+  
+    <li><a href="./Util/CLI.html">Util::CLI</a>
+  
+    <li><a href="./Util/CLI/OptionParserExtension.html">Util::CLI::OptionParserExtension</a>
+  
+    <li><a href="./Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="./Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="./Util/I18n.html">Util::I18n</a>
+  
+    <li><a href="./Util/LogParser.html">Util::LogParser</a>
+  
+    <li><a href="./Util/LogParser/Apache.html">Util::LogParser::Apache</a>
+  
+    <li><a href="./Util/LogParser/Rails.html">Util::LogParser::Rails</a>
+  
+    <li><a href="./Util/Pluggable.html">Util::Pluggable</a>
+  
+    <li><a href="./Util/Ruby.html">Util::Ruby</a>
+  
     <li><a href="./Net.html">Net</a>
   
     <li><a href="./Net/HTTPClientError.html">Net::HTTPClientError</a>
@@ -344,22 +368,6 @@
     <li><a href="./Net/HTTPServerError.html">Net::HTTPServerError</a>
   
     <li><a href="./Net/HTTPSuccess.html">Net::HTTPSuccess</a>
-  
-    <li><a href="./Util.html">Util</a>
-  
-    <li><a href="./Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
-  
-    <li><a href="./Util/CLI.html">Util::CLI</a>
-  
-    <li><a href="./Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="./Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="./Util/I18n.html">Util::I18n</a>
-  
-    <li><a href="./Util/Pluggable.html">Util::Pluggable</a>
-  
-    <li><a href="./Util/Ruby.html">Util::Ruby</a>
   
     <li><a href="./Object.html">Object</a>
   
@@ -447,11 +455,11 @@
 
         <div class="method-description">
           
-          <p>Format–Uses the first string in <em>array</em> for which the
-corresponding combination of <em>other_array</em> does not contain blank
-elements as a format specification, and returns the result of applying it
-to that combination (cf. String#%). Returns an empty string if
-<em>other_array</em> is empty.</p>
+          <p>Format–Uses the first string in <em>array</em> for which the corresponding
+combination of <em>other_array</em> does not contain blank elements as a
+format specification, and returns the result of applying it to that
+combination (cf. String#%). Returns an empty string if <em>other_array</em>
+is empty.</p>
 
 <p>Applies to string argument accordingly: First string in <em>array</em>
 applied to <em>str</em>; empty string if <em>str</em> is empty.</p>
