--- a/Nuggets/IO/InteractMixin.html
+++ b/Nuggets/IO/InteractMixin.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Nuggets::IO::InteractMixin - ruby-nuggets Application documentation (v0.8.7)</title>
+<title>module Nuggets::IO::InteractMixin - ruby-nuggets Application documentation (v0.8.8)</title>
 
 <link type="text/css" media="screen" href="../../rdoc.css" rel="stylesheet">
 
@@ -199,6 +199,30 @@
   
     <li><a href="../../Nuggets/Version.html">Nuggets::Version</a>
   
+    <li><a href="../../Util.html">Util</a>
+  
+    <li><a href="../../Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
+  
+    <li><a href="../../Util/CLI.html">Util::CLI</a>
+  
+    <li><a href="../../Util/CLI/OptionParserExtension.html">Util::CLI::OptionParserExtension</a>
+  
+    <li><a href="../../Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="../../Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="../../Util/I18n.html">Util::I18n</a>
+  
+    <li><a href="../../Util/LogParser.html">Util::LogParser</a>
+  
+    <li><a href="../../Util/LogParser/Apache.html">Util::LogParser::Apache</a>
+  
+    <li><a href="../../Util/LogParser/Rails.html">Util::LogParser::Rails</a>
+  
+    <li><a href="../../Util/Pluggable.html">Util::Pluggable</a>
+  
+    <li><a href="../../Util/Ruby.html">Util::Ruby</a>
+  
     <li><a href="../../Net.html">Net</a>
   
     <li><a href="../../Net/HTTPClientError.html">Net::HTTPClientError</a>
@@ -214,22 +238,6 @@
     <li><a href="../../Net/HTTPServerError.html">Net::HTTPServerError</a>
   
     <li><a href="../../Net/HTTPSuccess.html">Net::HTTPSuccess</a>
-  
-    <li><a href="../../Util.html">Util</a>
-  
-    <li><a href="../../Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
-  
-    <li><a href="../../Util/CLI.html">Util::CLI</a>
-  
-    <li><a href="../../Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="../../Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="../../Util/I18n.html">Util::I18n</a>
-  
-    <li><a href="../../Util/Pluggable.html">Util::Pluggable</a>
-  
-    <li><a href="../../Util/Ruby.html">Util::Ruby</a>
   
     <li><a href="../../Object.html">Object</a>
   
@@ -314,15 +322,15 @@
 
 <p><code>input</code> represents the sending end and is a mapping from the
 actual input <a href="../IO.html">IO</a> (to send into the pipe) to the
-pipe’s input handle (<em>stdin</em>). The input <a
-href="../IO.html">IO</a> must support <code>read_nonblock</code>. If it’s
-a StringIO it will be extended appropriately. If it’s a <a
-href="../String.html">String</a> it will be converted to a StringIO.</p>
+pipe's input handle (<em>stdin</em>). The input <a href="../IO.html">IO</a>
+must support <code>read_nonblock</code>. If it's a StringIO it will be
+extended appropriately. If it's a <a href="../String.html">String</a> it
+will be converted to a StringIO.</p>
 
 <p><code>output</code> represents the receiving end and is a mapping from the
-pipe’s output handle (<em>stdout</em>) to the designated output <a
+pipe's output handle (<em>stdout</em>) to the designated output <a
 href="../IO.html">IO</a> (to receive data from the pipe), and, optionally,
-from the pipe’s error handle (<em>stderr</em>) to the designated error <a
+from the pipe's error handle (<em>stderr</em>) to the designated error <a
 href="../IO.html">IO</a>. The output and error <a href="../IO.html">IO</a>
 must support <code>&lt;&lt;</code> with a string argument. If either of
 them is a <a href="../Proc.html">Proc</a> it will be extended such that
