--- a/Util/I18n.html
+++ b/Util/I18n.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Util::I18n - ruby-nuggets Application documentation (v0.8.7)</title>
+<title>module Util::I18n - ruby-nuggets Application documentation (v0.8.8)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -199,6 +199,30 @@
   
     <li><a href="../Nuggets/Version.html">Nuggets::Version</a>
   
+    <li><a href="../Util.html">Util</a>
+  
+    <li><a href="../Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
+  
+    <li><a href="../Util/CLI.html">Util::CLI</a>
+  
+    <li><a href="../Util/CLI/OptionParserExtension.html">Util::CLI::OptionParserExtension</a>
+  
+    <li><a href="../Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="../Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="../Util/I18n.html">Util::I18n</a>
+  
+    <li><a href="../Util/LogParser.html">Util::LogParser</a>
+  
+    <li><a href="../Util/LogParser/Apache.html">Util::LogParser::Apache</a>
+  
+    <li><a href="../Util/LogParser/Rails.html">Util::LogParser::Rails</a>
+  
+    <li><a href="../Util/Pluggable.html">Util::Pluggable</a>
+  
+    <li><a href="../Util/Ruby.html">Util::Ruby</a>
+  
     <li><a href="../Net.html">Net</a>
   
     <li><a href="../Net/HTTPClientError.html">Net::HTTPClientError</a>
@@ -214,22 +238,6 @@
     <li><a href="../Net/HTTPServerError.html">Net::HTTPServerError</a>
   
     <li><a href="../Net/HTTPSuccess.html">Net::HTTPSuccess</a>
-  
-    <li><a href="../Util.html">Util</a>
-  
-    <li><a href="../Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
-  
-    <li><a href="../Util/CLI.html">Util::CLI</a>
-  
-    <li><a href="../Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="../Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="../Util/I18n.html">Util::I18n</a>
-  
-    <li><a href="../Util/Pluggable.html">Util::Pluggable</a>
-  
-    <li><a href="../Util/Ruby.html">Util::Ruby</a>
   
     <li><a href="../Object.html">Object</a>
   
@@ -325,7 +333,7 @@
           <div class="method-source-code" id="args_for_map_diacritics-source">
             <pre><span class="ruby-comment"># File lib/nuggets/util/i18n.rb, line 98</span>
 <span class="ruby-keyword">def</span> <span class="ruby-keyword">self</span>.<span class="ruby-identifier">args_for_map_diacritics</span>
-  <span class="ruby-ivar">@gsub_for_map_diacritics</span> <span class="ruby-operator">||=</span> <span class="ruby-keyword">begin</span>
+  <span class="ruby-ivar">@args_for_map_diacritics</span> <span class="ruby-operator">||=</span> <span class="ruby-keyword">begin</span>
     <span class="ruby-identifier">map</span> = <span class="ruby-operator">::</span><span class="ruby-constant">Hash</span>.<span class="ruby-identifier">new</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">h</span>, <span class="ruby-identifier">k</span><span class="ruby-operator">|</span> <span class="ruby-identifier">h</span>[<span class="ruby-identifier">k</span>] = [] }
 
     <span class="ruby-constant">DIACRITICS</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">a</span><span class="ruby-operator">|</span> <span class="ruby-identifier">a</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">i</span><span class="ruby-operator">|</span> <span class="ruby-identifier">map</span>[<span class="ruby-identifier">i</span>].<span class="ruby-identifier">concat</span>(<span class="ruby-identifier">a</span>) } }
