--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>ruby-nuggets Application documentation (v0.8.7)</title>
+<title>ruby-nuggets Application documentation (v0.8.8)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -171,6 +171,30 @@
   
     <li><a href="./Nuggets/Version.html">Nuggets::Version</a>
   
+    <li><a href="./Util.html">Util</a>
+  
+    <li><a href="./Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
+  
+    <li><a href="./Util/CLI.html">Util::CLI</a>
+  
+    <li><a href="./Util/CLI/OptionParserExtension.html">Util::CLI::OptionParserExtension</a>
+  
+    <li><a href="./Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="./Util/ContentType.html">Util::ContentType</a>
+  
+    <li><a href="./Util/I18n.html">Util::I18n</a>
+  
+    <li><a href="./Util/LogParser.html">Util::LogParser</a>
+  
+    <li><a href="./Util/LogParser/Apache.html">Util::LogParser::Apache</a>
+  
+    <li><a href="./Util/LogParser/Rails.html">Util::LogParser::Rails</a>
+  
+    <li><a href="./Util/Pluggable.html">Util::Pluggable</a>
+  
+    <li><a href="./Util/Ruby.html">Util::Ruby</a>
+  
     <li><a href="./Net.html">Net</a>
   
     <li><a href="./Net/HTTPClientError.html">Net::HTTPClientError</a>
@@ -186,22 +210,6 @@
     <li><a href="./Net/HTTPServerError.html">Net::HTTPServerError</a>
   
     <li><a href="./Net/HTTPSuccess.html">Net::HTTPSuccess</a>
-  
-    <li><a href="./Util.html">Util</a>
-  
-    <li><a href="./Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a>
-  
-    <li><a href="./Util/CLI.html">Util::CLI</a>
-  
-    <li><a href="./Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="./Util/ContentType.html">Util::ContentType</a>
-  
-    <li><a href="./Util/I18n.html">Util::I18n</a>
-  
-    <li><a href="./Util/Pluggable.html">Util::Pluggable</a>
-  
-    <li><a href="./Util/Ruby.html">Util::Ruby</a>
   
     <li><a href="./Object.html">Object</a>
   
@@ -247,7 +255,7 @@
 
 <h2 id="label-VERSION">VERSION</h2>
 
-<p>This documentation refers to ruby-nuggets version 0.8.7</p>
+<p>This documentation refers to ruby-nuggets version 0.8.8</p>
 
 <h2 id="label-DESCRIPTION">DESCRIPTION</h2>
 
