--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>Table of Contents - ruby-nuggets Application documentation (v0.8.8)</title>
+<title>Table of Contents - ruby-nuggets Application documentation (v0.8.9)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
 
 <body class="indexpage">
-<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.8)</h1>
+<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.9)</h1>
 
 <h2>Pages</h2>
 <ul>
@@ -242,6 +242,9 @@
   </li>
     <li class="module">
     <a href="Util/I18n.html">Util::I18n</a>
+  </li>
+    <li class="module">
+    <a href="Util/LazyAttr.html">Util::LazyAttr</a>
   </li>
     <li class="module">
     <a href="Util/LogParser.html">Util::LogParser</a>
@@ -634,6 +637,8 @@
   
     <li class="method"><a href="Hash.html#method-i-last">#last &mdash; Hash</a>
   
+    <li class="method"><a href="Util/LazyAttr.html#method-i-lazy_attr">#lazy_attr &mdash; Util::LazyAttr</a>
+  
     <li class="method"><a href="Nuggets/Integer/LengthMixin.html#method-i-length">#length &mdash; Nuggets::Integer::LengthMixin</a>
   
     <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-limit">#limit &mdash; Nuggets::Array::LimitMixin</a>
@@ -674,9 +679,9 @@
   
     <li class="method"><a href="Nuggets/Integer/MapMixin.html#method-i-map_positive">#map_positive &mdash; Nuggets::Integer::MapMixin</a>
   
-    <li class="method"><a href="Enumerable.html#method-i-max">#max &mdash; Enumerable</a>
-  
     <li class="method"><a href="Numeric.html#method-i-max">#max &mdash; Numeric</a>
+  
+    <li class="method"><a href="Enumerable.html#method-i-max">#max &mdash; Enumerable</a>
   
     <li class="method"><a href="Enumerable.html#method-i-max_by">#max_by &mdash; Enumerable</a>
   
