--- a/Nuggets/Array/RuniqMixin.html
+++ b/Nuggets/Array/RuniqMixin.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Nuggets::Array::RuniqMixin - ruby-nuggets Application documentation (v0.8.8)</title>
+<title>module Nuggets::Array::RuniqMixin - ruby-nuggets Application documentation (v0.8.9)</title>
 
 <link type="text/css" media="screen" href="../../rdoc.css" rel="stylesheet">
 
@@ -214,6 +214,8 @@
     <li><a href="../../Util/ContentType.html">Util::ContentType</a>
   
     <li><a href="../../Util/I18n.html">Util::I18n</a>
+  
+    <li><a href="../../Util/LazyAttr.html">Util::LazyAttr</a>
   
     <li><a href="../../Util/LogParser.html">Util::LogParser</a>
   
