--- a/Util.html
+++ b/Util.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Util - ruby-nuggets Application documentation (v0.8.8)</title>
+<title>module Util - ruby-nuggets Application documentation (v0.8.9)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -50,6 +50,7 @@
     <li>lib/nuggets/util/cli.rb
     <li>lib/nuggets/util/i18n.rb
     <li>lib/nuggets/util/ruby.rb
+    <li>lib/nuggets/util/lazy_attr.rb
     <li>lib/nuggets/util/pluggable.rb
     <li>lib/nuggets/util/log_parser.rb
     <li>lib/nuggets/util/content_type.rb
@@ -211,6 +212,8 @@
     <li><a href="./Util/ContentType.html">Util::ContentType</a>
   
     <li><a href="./Util/I18n.html">Util::I18n</a>
+  
+    <li><a href="./Util/LazyAttr.html">Util::LazyAttr</a>
   
     <li><a href="./Util/LogParser.html">Util::LogParser</a>
   
