--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -44,6 +44,16 @@
 
 
   
+<div id="table-of-contents">
+  <nav class="section">
+    <h3 class="section-header">Table of Contents</h3>
+    <ul>
+      <li><a href="#label-Revision+history+for+ruby-nuggets">Revision history for ruby-nuggets</a>
+      <li><a href="#label-x.y.z+%5Byyyy-mm-dd%5D">x.y.z [yyyy-mm-dd]</a>
+    </ul>
+  </nav>
+</div>
+
 
   <div id="project-metadata">
     <nav id="fileindex-section" class="section project-section">
@@ -271,7 +281,12 @@
 
 <div id="documentation" class="description">
   
-<h1 id="label-ChangeLog"><a href="ChangeLog.html">ChangeLog</a><span><a href="#label-ChangeLog">&para;</a> <a href="#documentation">&uarr;</a></span></h1>
+<h1 id="label-Revision+history+for+ruby-nuggets">Revision history for ruby-nuggets<span><a href="#label-Revision+history+for+ruby-nuggets">&para;</a> <a href="#documentation">&uarr;</a></span></h1>
+
+<h2 id="label-x.y.z+%5Byyyy-mm-dd%5D">x.y.z [yyyy-mm-dd]<span><a href="#label-x.y.z+%5Byyyy-mm-dd%5D">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
+<ul><li>
+<p>…</p>
+</li></ul>
 
 </div>
 
