--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -38,7 +38,8 @@
 
     <img class="toc-toggle" src="images/transparent.png" alt="" title="toggle headings">
     <ul class="initially-hidden">
-      <li><a href="ChangeLog.html#label-ChangeLog">ChangeLog</a>
+      <li><a href="ChangeLog.html#label-Revision+history+for+ruby-nuggets">Revision history for ruby-nuggets</a>
+      <li><a href="ChangeLog.html#label-x.y.z+%5Byyyy-mm-dd%5D">x.y.z [yyyy-mm-dd]</a>
     </ul>
   </li>
     <li class="file">
